k8s/bovipro-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bovipro-prod
  labels:
    app.kubernetes.io/part-of: bovipro
    environment: prod
